<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.deean</groupId>
    <artifactId>DNMall</artifactId>
    <version>2.0.1</version>
    <modules>
        <module>common</module>
        <module>bean</module>
        <module>mapper</module>
        <module>service</module>
        <module>api</module>
    </modules>

    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
    </properties>

    <!--  <dependencies>-->
    <!--    <dependency>-->
    <!--      <groupId>org.springframework.boot</groupId>-->
    <!--      <artifactId>spring-boot-starter-web</artifactId>-->
    <!--    </dependency>-->

    <!--    <dependency>-->
    <!--      <groupId>org.projectlombok</groupId>-->
    <!--      <artifactId>lombok</artifactId>-->
    <!--      <optional>true</optional>-->
    <!--    </dependency>-->
    <!--    <dependency>-->
    <!--      <groupId>org.springframework.boot</groupId>-->
    <!--      <artifactId>spring-boot-starter-tomcat</artifactId>-->
    <!--      <scope>provided</scope>-->
    <!--    </dependency>-->
    <!--    <dependency>-->
    <!--      <groupId>org.springframework.boot</groupId>-->
    <!--      <artifactId>spring-boot-starter-test</artifactId>-->
    <!--      <scope>test</scope>-->
    <!--    </dependency>-->
    <!--  </dependencies>-->

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.30</version>
                <optional>true</optional>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
